<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1CA4C6"
    tools:context=".exibirChamp">

    <ImageView
        android:id="@+id/imgChamp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/bot"
        app:layout_constraintBottom_toTopOf="@+id/txtDificul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ashe" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="140dp"
        android:text="@string/nAshe"
        android:textColor="#0E0E0E"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtLane"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgChamp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="154dp"
        android:text="@string/lAshe"
        android:textColor="#0E0E0E"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgChamp"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <TextView
        android:id="@+id/txtTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="512dp"
        android:text="@string/tAshe"
        android:textColor="#0E0E0E"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRecoA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgChamp"
        app:layout_constraintTop_toBottomOf="@+id/txtLane" />

    <TextView
        android:id="@+id/txtDificul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="545dp"
        android:text="@string/dAshe"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgChamp" />

    <Button
        android:id="@+id/btnRecoA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="310dp"
        android:layout_marginTop="666dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="17dp"
        android:onClick="recoChamp"
        android:text="@string/reco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLore"
        android:layout_width="376dp"
        android:layout_height="310dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="22dp"
        android:text="@string/iAshe"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVoltarList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSobre" />

    <TextView
        android:id="@+id/txtSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="347dp"
        android:layout_marginBottom="30dp"
        android:text="@string/sobre"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtLore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDificul" />

    <Button
        android:id="@+id/btnVoltarList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="202dp"
        android:layout_marginBottom="20dp"
        android:onClick="Voltar"
        android:text="@string/btnVoltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRecoA"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLore" />

</android.support.constraint.ConstraintLayout>