<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sorye">

    <ImageView
        android:id="@+id/imgSensor"
        android:layout_width="210dp"
        android:layout_height="197dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/imgYasuo"
        app:layout_constraintBottom_toTopOf="@+id/txtSorye"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yasuo" />

    <ImageView
        android:id="@+id/imgTornado"
        android:layout_width="413dp"
        android:layout_height="378dp"
        android:contentDescription="@string/gifTornado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSorye"
        app:srcCompat="@drawable/sorye" />

    <TextView
        android:id="@+id/txtSorye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="50dp"
        android:text="@string/txtSorye"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/imgTornado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSensor" />

</android.support.constraint.ConstraintLayout>