<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1CA4C6"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txtLoL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logolol" />

    <TextView
        android:id="@+id/txtLoL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/txtLoL"
        android:textColor="#B8A211"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnGuia"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:onClick="abrirGuia"
        android:text="@string/btnGuia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnJogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoL"
        app:layout_constraintVertical_bias="0.825" />

    <Button
        android:id="@+id/btnJogo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="100dp"
        android:onClick="abrirSensor"
        android:text="@string/btnJogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGuia"
        app:layout_constraintTop_toBottomOf="@+id/txtLoL"
        app:layout_constraintVertical_bias="0.825" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="67dp"
        android:onClick="siteWT"
        android:text="@string/btnWT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuia"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="67dp"
        android:onClick="abrirMaps"
        android:text="@string/btnEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/btnJogo" />

</android.support.constraint.ConstraintLayout>